frame module fix positions and visibility

--- a/themes/ardit/scss/app.scss
+++ b/themes/ardit/scss/app.scss
@@ -1359,6 +1359,7 @@ nav.navbar {
   display:none;
 }
 .frame-module{
+  visibility:hidden;
   position: absolute;
   top: 380px;
   //right: 200px;
